[package]
name = "my_axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"   # Load environment variables from .env
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }